--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.52.3",
+    "@trpc/client": "^11.0.0-rc.490",
+    "@trpc/react-query": "^11.0.0-rc.490",
+    "@trpc/server": "^11.0.0-rc.490",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
@@ -30,6 +35,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
