--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
