--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-colorful": "^5.6.1",
