--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/client": "^11.0.0-rc.490",
     "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
+    "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
