--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "prisma": "^5.19.0",
+    "prisma-json-types-generator": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
