--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -46,7 +47,6 @@
     "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -54,7 +54,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
