--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/client": "^11.0.0-rc.490",
     "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
+    "@uploadthing/react": "^7.0.3",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
@@ -47,6 +48,7 @@
     "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.1.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
