--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
