--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
