--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongodb": "^6.8.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.13",
+    "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-colorful": "^5.6.1",
