--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -12,6 +12,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/redis": "workspace:*",
     "@clerk/nextjs": "^5.3.2",
     "@clerk/themes": "^2.1.25",
     "@clerk/types": "^4.34.0",
@@ -36,7 +37,6 @@
     "@trpc/server": "^11.0.0-rc.490",
     "@uploadthing/react": "^7.0.3",
     "@uploadthing/shared": "7.0.3",
-    "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
