--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -11,12 +11,11 @@
   "author": "maateh",
   "license": "ISC",
   "dependencies": {
-    "@upstash/redis": "^1.34.3",
     "express": "^4.21.2",
-    "nanoid": "^5.0.9",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@repo/redis": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "tsx": "^4.19.2"
