--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@repo/redis": "workspace:*",
+    "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
     "@tanstack/react-table": "^8.20.5",
     "@trpc/client": "^11.0.0-rc.490",
