--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -16,7 +16,6 @@
     "@clerk/themes": "^2.1.25",
     "@clerk/types": "^4.34.0",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -30,6 +29,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@repo/redis": "workspace:*",
+    "@repo/db": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
     "@tanstack/react-table": "^8.20.5",
@@ -71,8 +71,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.20.0",
-    "prisma-json-types-generator": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
