--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "private": true,
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./types": "./src/types.d.ts"
   },
   "scripts": {
     "db:generate": "prisma generate",
@@ -14,6 +15,8 @@
     "@prisma/client": "^5.20.0"
   },
   "devDependencies": {
+    "@repo/ts-config": "workspace:*",
+    "@types/node": "^22.10.4",
     "prisma": "^5.20.0",
     "prisma-json-types-generator": "^3.1.1"
   }
