build: move some schemas into a shared global package

--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -28,8 +28,9 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@repo/redis": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/schema": "workspace:*",
+    "@repo/redis": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
     "@tanstack/react-table": "^8.20.5",
