fix(config): shared zod schemas now have proper types

--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -6,6 +6,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "references": [{ "path": "../../packages/schema" }],
   "include": [
     "next-env.d.ts",
     "next.config.js",
