--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@repo/ts-config/base.json",
   "compilerOptions": {
-    "noEmit": true,
+    "incremental": true,
+    "composite": true,
     "paths": {
       "@/*": ["./src/*"]
     }
