--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "preinstall": "npx only-allow pnpm",
     "check-types": "tsc --noEmit"
