--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -22,7 +22,6 @@
     "@repo/ts-config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5"
+    "tsx": "^4.19.2"
   }
 }
