--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "private": true,
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint"
   },
-  "devDependencies": {
-    "turbo": "^2.3.3"
-  },
-  "packageManager": "pnpm@9.0.0",
   "dependencies": {
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "turbo": "^2.3.3"
   }
 }
