--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "exports": {
     ".": "./src/index.ts",
-    "./types": "./src/types.d.ts"
+    "./types": {
+      "default": "./src/types.ts",
+      "types": "./src/types.ts"
+    }
   },
   "scripts": {
     "db:generate": "prisma generate",
