--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
+    "@repo/types": "workspace:*",
     "@repo/redis": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
