build: add shared `helper` package
- `generateSessionSlug` session helper has been moved into this package because it is needed in both apps (`next-app`, `socket-api`).

--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
+    "@repo/helper": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/redis": "workspace:*",
     "@repo/ts-config": "workspace:*",
@@ -46,7 +47,6 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
-    "nanoid": "^5.0.7",
     "next": "^14.2.13",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
