--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -27,11 +27,11 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@repo/config": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/helper": "workspace:*",
     "@repo/types": "workspace:*",
-    "@repo/redis": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
     "@tanstack/react-table": "^8.20.5",
@@ -40,6 +40,7 @@
     "@trpc/server": "^11.0.0-rc.490",
     "@uploadthing/react": "^7.0.3",
     "@uploadthing/shared": "7.0.3",
+    "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
