--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -13,10 +13,11 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/redis": "workspace:*",
+    "@repo/config": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/helper": "workspace:*",
     "@repo/types": "workspace:*",
+    "@upstash/redis": "^1.34.3",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   },
