--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@repo/config",
   "exports": {
-    "./redis-keys": "./redis/keys.ts"
+    "./redis-keys": "./redis/keys.ts",
+    "./redis-data-parser": "./redis/data-parser.ts"
+  },
+  "devDependencies": {
+    "@repo/ts-config": "workspace:*",
+    "@repo/types": "workspace:*"
   }
 }
