--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "extends": "@repo/ts-config/base.json",
+  "compilerOptions": {
+    "incremental": true,
+    "composite": true,
+    "rootDir": "./",
+    "outDir": "./dist"
+  },
   "include": [
     "**/*.ts",
     "**/*.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
