--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@repo/config": "workspace:*",
     "@repo/schema": "workspace:*",
+    "@repo/server": "workspace:*",
     "@repo/helper": "workspace:*",
     "@repo/types": "workspace:*",
     "@upstash/redis": "^1.34.3",
