--- a/apps/socket-api/tsconfig.json
+++ b/apps/socket-api/tsconfig.json
@@ -9,7 +9,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "references": [{ "path": "../../packages/schema" }],
+  "references": [{ "path": "../../packages/schema" }, { "path": "../../packages/server" }],
   "include": [
     "**/*.ts",
     "**/*.d.ts"
