--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,10 +5,7 @@
     "composite": true,
     "rootDir": "./",
     "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true,
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "**/*.ts",
