--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -31,7 +31,6 @@
     "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
-    "@repo/helper": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@tanstack/react-query": "^5.52.3",
@@ -49,6 +48,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.13",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
