--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
     "@repo/types": "workspace:*",
