--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -10,7 +10,7 @@
     "./session-room-validation": "./src/validation/session-room-validation.ts"
   },
   "dependencies": {
-    "@repo/server": "workspace:*"
+    "@repo/db": "workspace:*"
   },
   "devDependencies": {
     "@repo/ts-config": "workspace:*"
