--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,6 @@
   "license": "MIT",
   "private": true,
   "exports": {
-    "./db": "./src/db/db.ts",
-    "./db-types": "./src/db/types/index.d.ts",
-    "./db-schema-types": "./prisma/generated/zod/index.ts",
     "./error": "./src/error/error.ts",
     "./redis": "./src/redis/redis.ts",
     "./redis-settings": "./src/redis/settings.ts",
@@ -14,21 +11,13 @@
     "./redis-keys": "./src/redis/keys.ts",
     "./redis-data-parser": "./src/redis/data-parser.ts"
   },
-  "scripts": {
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push --skip-generate"
-  },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "@upstash/redis": "^1.34.3",
-    "zod-prisma-types": "^3.2.4"
+    "@upstash/redis": "^1.34.3"
   },
   "devDependencies": {
-    "@repo/ts-config": "workspace:*",
     "@repo/schema": "workspace:*",
+    "@repo/ts-config": "workspace:*",
     "@repo/types": "workspace:*",
-    "@types/node": "^22.10.4",
-    "prisma": "^5.20.0",
-    "prisma-json-types-generator": "^3.1.1"
+    "@types/node": "^22.10.4"
   }
 }
