--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
+    "@clerk/express": "^1.3.47",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   },
