--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -13,6 +13,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/db": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
     "@clerk/express": "^1.3.47",
