refactor: reorganize room/player/connection related schemas
- removed the `session` "prefix" from `room` schema(s)
- reorganized `room-player` schemas into a single file
  -> `room-player` now stores the whole `player-connection` instead of some random values attached to the base object
- `PlayerConnection` is now defined using zod schemas instead of type declaration
- updated `@repo/schemas` package exports

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -4,10 +4,12 @@
   "license": "MIT",
   "exports": {
     "./session": "./src/session-schema.ts",
-    "./session-room": "./src/session-room-schema.ts",
     "./player": "./src/player-schema.ts",
+    "./player-connection": "./src/player-connection-schema.ts",
+    "./room": "./src/room-schema.ts",
+    "./room-player": "./src/room-player-schema.ts",
     "./session-validation": "./src/validation/session-validation.ts",
-    "./session-room-validation": "./src/validation/session-room-validation.ts"
+    "./room-validation": "./src/validation/room-validation.ts"
   },
   "dependencies": {
     "@repo/db": "workspace:*"
