chore: add player connection parser to `@repo/server`

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "exports": {
     "./error": "./src/error/error.ts",
+    "./util": "./src/util/index.ts",
     "./redis": "./src/redis/redis.ts",
     "./redis-settings": "./src/redis/settings.ts",
     "./redis-commands": "./src/redis/commands/index.ts",
