refactor(server): separate redis room commands
- Redis (room) commands now doesn't throw `ServerError` if the room not found (gives back `null` instead by default).
- A separate `"throwable"` file export has been added to the `@repo/server` package that can be used instead of getting back `null` if the room not found.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "./redis": "./src/redis/redis.ts",
     "./redis-settings": "./src/redis/settings.ts",
     "./redis-commands": "./src/redis/commands/index.ts",
+    "./redis-commands-throwable": "./src/redis/commands/throwable/index.ts",
     "./redis-keys": "./src/redis/keys.ts",
     "./socket-types": "./src/types/socket.ts"
   },
