feat: add connection helper and config values
- added `reconnectionTimeExpired` connection helper to calculate that the disconnected player's reconnection time has expired or not.

Note: `onlinePlayer`/`offlinePlayer` parsing utils might be moved to this helper file in the future.

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "private": true,
   "exports": {
+    "./connection": "./src/connection-settings.ts",
     "./game": "./src/game-settings.ts"
   },
   "dependencies": {
