--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "private": true,
   "exports": {
+    "./connection": "./src/connection-helper.ts",
     "./session": "./src/session-helper.ts"
   },
   "dependencies": {
