--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@repo/helper": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
     "@clerk/express": "^1.3.47",
