build: compiling shared packages

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch --preserveWatchOutput",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx only-allow pnpm",
+    "check-types": "tsc --noEmit"
+  },
   "exports": {
-    "./connection": "./src/connection-settings.ts",
-    "./game": "./src/game-settings.ts"
+    "./connection": "./dist/connection-settings.js",
+    "./game": "./dist/game-settings.js"
   },
   "dependencies": {
     "lucide-react": "^0.429.0"
