--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -1,14 +1,11 @@
 {
-  "extends": "@repo/ts-config/base.json",
+  "extends": "@repo/ts-config/packages.json",
   "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
     "incremental": true,
-    "composite": true,
-    "rootDir": "./",
-    "outDir": "./dist"
+    "composite": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.d.ts"
-  ],
+  "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
