--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "extends": "@repo/ts-config/base.json",
+  "extends": "@repo/ts-config/packages.json",
   "compilerOptions": {
-    "incremental": true,
-    "composite": true,
-    "rootDir": "./",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true
+    "incremental": true,
+    "composite": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.d.ts"
-  ],
+  "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
