--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,10 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "exports": {
-    "./error": "./dist/error/error.js",
+    "./error": "./dist/error/index.js",
     "./db": "./dist/db/index.js",
     "./db-session-mutation": "./dist/db/mutation/session-mutation.js",
-    "./redis": "./dist/redis/redis.js",
+    "./redis": "./dist/redis/index.js",
     "./redis-settings": "./dist/redis/settings.js",
     "./redis-commands": "./dist/redis/commands/index.js",
     "./redis-commands-throwable": "./dist/redis/commands/throwable/index.js",
