--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "extends": "@repo/ts-config/base.json",
+  "extends": "@repo/ts-config/packages.json",
   "compilerOptions": {
     "incremental": true,
     "composite": true,
-    "rootDir": "./",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.d.ts"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts", "**/*.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
