build: fix remaining build problems

--- a/apps/socket-api/tsconfig.json
+++ b/apps/socket-api/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
+    "incremental": true,
+    "composite": true,
     "paths": {
       "@/*": ["./src/*"]
     }
