--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,6 +10,7 @@
     "dev": "tsc --watch --preserveWatchOutput",
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "prisma generate",
     "check-types": "tsc --noEmit"
   },
   "exports": {
