build: fix compile packages in dev environment
+ added `concurrently` as a dev dependency where `tsc-alias` is used and replacing path aliases is required

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
-    "build": "tsc && tsc-alias -p tsconfig.json",
-    "dev": "tsc --watch --preserveWatchOutput",
+    "build": "tsc && tsc-alias",
+    "dev": "concurrently --kill-others \"tsc --watch --preserveWatchOutput\" \"tsc-alias --watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "prisma generate",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@repo/ts-config": "workspace:*",
     "@types/node": "^22.10.4",
+    "concurrently": "^9.1.2",
     "prisma": "^5.20.0",
     "prisma-json-types-generator": "^3.1.1",
     "tsc-alias": "^1.8.10",
