--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && tsc-alias -p tsconfig.json",
-    "dev": "tsc --watch --preserveWatchOutput",
+    "build": "tsc && tsc-alias",
+    "dev": "concurrently --kill-others \"tsc --watch --preserveWatchOutput\" \"tsc-alias --watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npx only-allow pnpm",
     "check-types": "tsc --noEmit"
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@repo/ts-config": "workspace:*",
+    "concurrently": "^9.1.2",
     "tsc-alias": "^1.8.10"
   }
 }
