--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc && tsc-alias -p tsconfig.json",
-    "dev": "tsc --watch --preserveWatchOutput",
+    "build": "tsc && tsc-alias",
+    "dev": "concurrently --kill-others \"tsc --watch --preserveWatchOutput\" \"tsc-alias --watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npx only-allow pnpm",
     "check-types": "tsc --noEmit"
@@ -31,6 +31,7 @@
     "@repo/schema": "workspace:*",
     "@repo/ts-config": "workspace:*",
     "@types/node": "^22.10.4",
+    "concurrently": "^9.1.2",
     "tsc-alias": "^1.8.10"
   }
 }
