refactor: move `current/otherPlayerKey` utils to `@repo/helper`

--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -12,7 +12,8 @@
   },
   "exports": {
     "./connection": "./dist/connection-helper.js",
-    "./session": "./dist/session-helper.js"
+    "./session": "./dist/session-helper.js",
+    "./player": "./dist/player-helper.js"
   },
   "dependencies": {
     "@repo/config": "workspace:*",
