--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -10,13 +10,11 @@
     "check-types": "tsc --noEmit"
   },
   "exports": {
-    "./session": "./dist/session-schema.js",
-    "./player": "./dist/player-schema.js",
-    "./player-connection": "./dist/player-connection-schema.js",
-    "./room": "./dist/room-schema.js",
-    "./room-player": "./dist/room-player-schema.js",
-    "./session-validation": "./dist/validation/session-validation.js",
-    "./room-validation": "./dist/validation/room-validation.js"
+    "./player": "./dist/player/index.js",
+    "./room": "./dist/room/index.js",
+    "./room-validation": "./dist/room/validation/index.js",
+    "./session": "./dist/session/index.js",
+    "./session-validation": "./dist/session/validation/index.js"
   },
   "dependencies": {
     "@repo/db": "workspace:*"
