refactor(schema): move `player-validation` to `@repo/schema`

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -11,6 +11,7 @@
   },
   "exports": {
     "./player": "./dist/player/index.js",
+    "./player-validation": "./dist/player/validation/index.js",
     "./room": "./dist/room/index.js",
     "./room-validation": "./dist/room/validation/index.js",
     "./session": "./dist/session/index.js",
