--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -48,12 +48,12 @@
     "lucide-react": "^0.429.0",
     "mongodb": "^6.8.0",
     "nanoid": "^5.0.7",
-    "next": "^14.2.13",
+    "next": "15.2.2",
     "next-safe-action": "^7.10.3",
-    "next-themes": "^0.3.0",
-    "react": "^18",
+    "next-themes": "^0.4.6",
+    "react": "19.0.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.53.0",
     "server-only": "^0.0.1",
     "socket.io-client": "^4.8.1",
@@ -68,11 +68,17 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.10",
+      "@types/react-dom": "19.0.4"
+    }
   }
 }
