--- a/turbo.json
+++ b/turbo.json
@@ -1,17 +1,19 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "build": {
+      "dependsOn": ["^db:generate", "^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+    },
     "dev": {
       "persistent": true,
-      "cache": false
+      "cache": false,
+      "inputs": ["$TURBO_DEFAULT$", ".env*"]
     },
     "start": {
       "persistent": true,
       "cache": false
-    },
-    "build": {
-      "dependsOn": ["^db:generate", "^build"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
