chore(config): disable git auto deployments

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "framework": "nextjs",
+  "git": {
+    "deploymentEnabled": {
+      "main": false
+    }
+  },
   "crons": [
     {
       "path": "/api/cron/save-sessions",
@@ -8,6 +14,5 @@
       "path": "/api/cron/save-sessions",
       "schedule": "0 12 */1 * *"
     }
-  ],
-  "framework": "nextjs"
+  ]
 }
