feat(config/helper): implement elo calculations

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,6 +12,7 @@
   },
   "exports": {
     "./connection": "./dist/connection-settings.js",
+    "./elo": "./dist/elo-settings.js",
     "./game": "./dist/game-settings.js"
   },
   "dependencies": {
