--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -12,6 +12,7 @@
   },
   "exports": {
     "./connection": "./dist/connection-helper.js",
+    "./elo": "./dist/elo-helper.js",
     "./session": "./dist/session-helper.js",
     "./player": "./dist/player-helper.js"
   },
