--- a/apps/socket-api/package.json
+++ b/apps/socket-api/package.json
@@ -17,6 +17,7 @@
     "@repo/helper": "workspace:*",
     "@repo/schema": "workspace:*",
     "@repo/server": "workspace:*",
+    "@repo/util": "workspace:*",
     "@clerk/express": "^1.3.47",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
