--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "./db": "./dist/db/index.js",
     "./db-session-mutation": "./dist/db/mutation/session-mutation.js",
     "./redis": "./dist/redis/index.js",
+    "./redis-json": "./dist/redis/json-helper.js",
     "./redis-settings": "./dist/redis/settings.js",
     "./redis-commands": "./dist/redis/commands/index.js",
     "./redis-commands-throwable": "./dist/redis/commands/throwable/index.js",
