--- a/apps/next-app/vercel.json
+++ b/apps/next-app/vercel.json
@@ -6,11 +6,11 @@
   },
   "crons": [
     {
-      "path": "/api/cron/save-sessions",
+      "path": "/api/cron/redis-backup",
       "schedule": "0 0 */1 * *"
     },
     {
-      "path": "/api/cron/save-sessions",
+      "path": "/api/cron/redis-backup",
       "schedule": "0 12 */1 * *"
     }
   ]
