--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -60,7 +60,6 @@
     "superjson": "^2.2.1",
     "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
     "vaul": "^1.1.1",
     "zustand": "^4.5.5"
@@ -73,7 +72,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.2.3",
     "postcss": "^8",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "tw-animate-css": "^1.2.5"
   },
   "pnpm": {
     "overrides": {
